--- a/Practica1/practica01.html
+++ b/Practica1/practica01.html
@@ -6,16 +6,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>Pàgina de noticies ITIC</title>
-    <style>
-        h2 {
-            background-color: rgba(44, 245, 149, 0.38);
-        }
-    </style>
 </head>
 
 <body>
     <!-- Títols principals -->
-    <h1 style="color:orange; text-align:center" >Notícies ITIC</h1>
+    <h1>Notícies ITIC</h1>
     <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis nisi mollis, sollicitudin.</h2>
 
     <!-- paragrafs de la noticia -->
@@ -62,8 +57,6 @@
             faucibus pretium. Duis a justo ante.</li>
         <li>Donec lectus nibh, gravida et nulla sed, luctus eleifend mi.</li>
     </ul>
-
-    <a href="taules.html">taules</a>
 </body>
 
 </html>
