Co-authored-by: Helenagapr <Helenagapr@users.noreply.github.com>

--- a/Practica4/formulari_enviat.html
+++ b/Practica4/formulari_enviat.html
@@ -6,6 +6,8 @@
     <title>Formulari</title>
 </head>
 <body>
-    
+    <h1>S'ha enviat el formulari!</h1>
+    <!--botó per tornar al formulari-->
+    <a href="formulari.html">Tornar</a>
 </body>
 </html>
