--- a/Practica4/formulari_enviat.html
+++ b/Practica4/formulari_enviat.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Formulari</title>
 </head>
 <body>
     <h1>S'ha enviat el formulari!</h1>
     <!--botó per tornar al formulari-->
-    <a href="formulari.html">Tornar</a>
+    <a href="formulari.html"><button>Tornar</button></a>
 </body>
 </html>
