--- a/Practica4/formulari.html
+++ b/Practica4/formulari.html
@@ -59,8 +59,8 @@
         <br>
 
         <!-- Area gran de text -->
-        <p>Hi ha algun tema més t'interessi? Explica'ns-ho!</p>
-        <textarea name="30" id="" cols="30" rows="10" placeholder="També m'agradaria saber les últimes novetats sobre..." required></textarea>
+        <label for="interessos">Hi ha algun tema més t'interessi? Explica'ns-ho!</label>
+        <textarea name="30" id="interessos" cols="30" rows="10" placeholder="També m'agradaria saber les últimes novetats sobre..." required></textarea>
         <br>
         <!-- Botó d'enviar el formulari -->
         <input type="submit" value="Subscriu-me">
