--- a/Practica5/index.html
+++ b/Practica5/index.html
@@ -23,7 +23,7 @@
     <main>
         <section id="menjar">
             <h2>Menjar preferit</h2>
-            <p>Nullam ante sem, rhoncus in commodo eu, faucibus a ex. Nam egestas non lectus eu condimentum. Maecenas lacinia, metus eu sodales mollis, augue ipsum accumsan tellus, iaculis molestie orci lectus eu turpis. Vestibulum vulputate odio et tortor iaculis porta. </p>
+            <p>Nullam ante sem, rhoncus in commodo eu, faucibus a ex. Nam egestas non lectus eu condimentum. Maecenas lacinia, metus eu sodales mollis, augue ipsum accumsan tellus, iaculis molestie orci lectus eu turpis. Vestibulum vulputate odio et tortor iaculis porta. ras facilisis enim porttitor convallis molestie. Ut mollis leo eu porttitor tincidunt. </p>
 
         </section>
         <section id="esport">
